--- a/client/styles/main.css
+++ b/client/styles/main.css
@@ -881,12 +881,14 @@ fieldset legend {
   justify-content: flex-start;
   align-items: center;
   flex-wrap: nowrap;
-  width: clamp(900px, 50%, 1200px);
+  width: 66vw;
+  max-width: 1200px;
   gap: 3rem;
   margin-bottom: 3rem;
 }
 .main-content.narrow {
-  width: clamp(600px, 50%, 1000px);
+  width: 50vw;
+  max-width: 1000px;
 }
 
 .content-block {
@@ -943,11 +945,10 @@ header {
   justify-content: space-between;
   align-items: stretch;
   flex-wrap: nowrap;
-  flex-grow: 1;
+  width: 17vw;
 }
 .header-section.left {
   justify-content: flex-end;
-  flex-basis: 25%;
 }
 .header-section.left a {
   height: 7rem;
@@ -961,13 +962,8 @@ header {
   justify-content: flex-start;
   align-items: flex-end;
   flex-wrap: nowrap;
-  flex-grow: 1;
-  min-width: 900px;
+  width: 66vw;
   max-width: 1200px;
-  gap: 4rem;
-}
-.header-section.right {
-  flex-basis: 25%;
 }
 .header-section.right .header-section-wrapper {
   margin-bottom: 1rem;
@@ -1161,7 +1157,8 @@ footer h3 {
 
 .slider-images {
   width: 100%;
-  height: clamp(400px, 30vw, 600px);
+  height: 37.125vw;
+  max-height: 675px;
   display: flex;
   position: relative;
   box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2);
@@ -2031,9 +2028,9 @@ CART ITEMS
     justify-content: center;
     align-items: stretch;
     flex-wrap: nowrap;
-    gap: 0.5rem;
-    width: 3rem;
-    height: 3rem;
+    gap: 0.4rem;
+    width: 2.5rem;
+    height: 2.5rem;
   }
   .mobile-nav-toggle .nav-toggle-icon .icon-line {
     background: #eb4791;
@@ -2056,6 +2053,9 @@ CART ITEMS
   .mobile-nav-toggle.active .icon-line:nth-child(2) {
     opacity: 0;
   }
+  .slider-images {
+    height: 56.25vw;
+  }
   #slider-prev {
     left: 0.5rem;
   }
@@ -2077,7 +2077,7 @@ CART ITEMS
     justify-content: space-evenly;
     align-items: flex-start;
     flex-wrap: wrap;
-    gap: 0;
+    gap: 2rem;
   }
   .category-card {
     width: 45%;
