--- a/client/styles/mobile/_header.scss
+++ b/client/styles/mobile/_header.scss
@@ -79,11 +79,10 @@
 
   .nav-toggle-icon {
     @include flex(column, center, stretch);
-    gap: .5rem;
-    width: 3rem;
-    height: 3rem;
+    gap: .4rem;
+    width: 2.5rem;
+    height: 2.5rem;
     
-    // gap: .3rem;
     .icon-line {
       background: $primary-color;
       border: 3px solid $primary-color;
